<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_driver_examples</name>
  <version>3.7.51</version>
  <description>The dynamixel driver examples package</description>

  <author email="matta@caltech.edu">matt</author>
  <maintainer email="matta@caltech.edu">matt</maintainer>

  <license>Apache 2.0</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/dynamixel_sdk_ros_examples</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>dynamixel_driver</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
